5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1593_2425.log
== TEST (2019-03-26 10:32:26) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))

k = d/c
print(round(x, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 3))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:48) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))

k = d/c
print(round(k, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:56) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))

k = d/c
print(round(k, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:33:03) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))

k = d/c
print(round(k, 3))
-- EXECUTION TIME:
0.146431
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:34:24) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))
d1 = float(input("digite um valor: "))
c1 = float(input("digite um valor: "))
k = d + d1 / c + c1
print(round(k, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d1 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:34:32) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))
d1 = float(input("digite um valor: "))
c1 = float(input("digite um valor: "))
k = d + d1 / c + c1
print(round(k, 3))
-- EXECUTION TIME:
0.187572
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 3, in <module>
    d1 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:35:07) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))
d1 = float(input("digite um valor: "))
c1 = float(input("digite um valor: "))
k = d + d1 / c + c1
print(round(k, 3))("km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d1 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:35:37) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))
d1 = float(input("digite um valor: "))
c1 = float(input("digite um valor: "))
k = d + d1 / c + c1
print(round(k, 3)("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d1 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:36:16) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))
d1 = float(input("digite um valor: "))
c1 = float(input("digite um valor: "))
k = d + d1 / c + c1
print(round(k, 3("km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d1 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:36:22) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))
d1 = float(input("digite um valor: "))
c1 = float(input("digite um valor: "))
k = d + d1 / c + c1
print(round(k, 3("km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d1 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:37:07) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))
d1 = float(input("digite um valor: "))
c1 = float(input("digite um valor: "))
k = d + d1 / c + c1
print((round(k, 3)),("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d1 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:37:28) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))
d1 = float(input("digite um valor: "))
c1 = float(input("digite um valor: "))
k = d + d1 / c + c1
print((round(k, 3)),("km/l"))
-- EXECUTION TIME:
0.190539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2425/main.py", line 3, in <module>
    d1 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:37:33) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))
d1 = float(input("digite um valor: "))
c1 = float(input("digite um valor: "))
k = d + d1 / c + c1
print((round(k, 3)),("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d1 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:37:59) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))

k = d / c 
print((round(k, 3)),("km/l"))
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:38:10) 
-- CODE:
d = float(input("digite um valor: "))
c = float(input("digite um valor: "))

k = d / c 
print((round(k, 3)),("km/l"))
-- EXECUTION TIME:
0.158234
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
